# DNDStoryTelling

./: .coverage  .coveragerc  .env.docker.test  .env.example  .env.test.minimal  .gitignore  .powershell-config.ps1  .pre-commit-config.yaml  .yamllint.yaml  AUDIO_TESTING_COMPLETION_SUMMARY.md  COMPLETE_TRANSCRIPTION_PROCESSING_SUMMARY.md  CONFIGURATION_GUIDE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-CHECKLIST_NEW.md  DEPLOYMENT.md  DEPLOYMENT_NEW.md  DOCKER_SETUP_GUIDE.md  DOCKER_TEST_REPORT.md  Dockerfile  Dockerfile.prod  ENHANCEMENT_SUMMARY.md  FEATURE_VALIDATION_CHECKLIST.md  GITHUB-ACTIONS-FIXES-SUMMARY.md  LARGE_FILE_ENHANCEMENT_SUMMARY.md  NAS-DEPLOYMENT.md  NAS-DEPLOYMENT_NEW.md  PRODUCTION_SYSTEMS.md  PROJECT-REORGANIZATION-COMPLETE.md  README.md  REORGANIZATION-SUMMARY.md  Run-Docker.ps1  Setup-PowerShell.ps1  TEST_COVERAGE_ANALYSIS.md  Verify-PowerShell-Config.ps1  alembic.ini  codecov.yml  conftest.py  coverage.xml  docker-compose.yml  pyproject.toml  (+16 more)
.github/: copilot-instructions.md
alembic/: env.py
app/: __init__.py  config.py  main.py
configuration/: .coveragerc  .env.docker  .env.test  alembic.ini
docs/: CODE_QUALITY_ANALYSIS.md  CONFIGURATION.md  CONTRIBUTING.md  CONTRIBUTING_NEW.md  DEPLOYMENT_STATUS.md  DOCKER_TESTING.md  FREE_SETUP_GUIDE.md  GITHUB-ACTIONS-TROUBLESHOOTING.md  GIT_CONFIGURATION.md  POWERSHELL_CONFIG.md  SYNOLOGY_DEPLOYMENT.md  SYNOLOGY_DEPLOYMENT_CHECKLIST.md  SYNOLOGY_NAS_DEPLOYMENT.md  TESTING.md  UI.md  UI_NEW.md
documentation/: CONTRIBUTING.md  DEPLOYMENT.md  DOCKER-IMPROVEMENTS-SUMMARY.md  DOCKER-PACKAGING.md  DOCKER-TEST-RESULTS.md  NAS-DEPLOYMENT.md  README-Docker.md  README.md  UI.md
postgres/: postgresql.conf
scripts/: Deploy-Synology.ps1  PowerShell-Security.psm1  check_openai_quota.py  comprehensive-docker-test.ps1  comprehensive-docker-test.sh  deploy-synology.sh  generate-secret-key.py  github-actions-health-check.sh  health_check.py  issue_report.py  monitor-synology.sh  package-docker.ps1  package-docker.sh  start-for-ui-tests.sh  start_free_services.py  start_server.py  test-docker.ps1  test-docker.sh  test_db_connection.py  validate_config.py
testing/: audio_mocks.py  audio_samples  audio_test_config.py  conftest_strategic.py  pytest_config.py  run_comprehensive_tests.py  test-docker-simple.ps1  test-docker.ps1  (+2 more)
(+142 files in other folders)
